# Plateforme-ESG

./: .env.prod.example  .gitignore  CHANGELOG.md  GETTING_STARTED.md  INSTALLATION.md  Makefile  QUICK_START.md  calculate_all_orgs_scores.py  calculate_scores_direct.py  docker-compose.bkp1  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.backup.1773419943  docker-compose.yml.bkp  final_fix.sh  final_fix_complete.sh  fix_esgrisk_model.sh  fix_esgrisk_model.sh.tmp  fix_everything.sh  fix_indicators_list.patch  fix_routes.sh  migration_002_apply.sql  pyproject.toml  scores.py  seed_150_indicators.py  seed_all_missing_data.py  seed_everything.py  seed_final_data.py  seed_initial_data.py  seed_sample_esg_data.py  setup_esgflow_v2.sh
.claude/: settings.local.json
backend/: Dockerfile  README.md  alembic.ini  alter_audit_logs_rename_metadata.sql  alter_data_entries_audit.sql  calculate_all_simple.py  create_admin.py  create_audit_log_table.sql  create_data_entries_table.sql  create_orgs.py  create_users.py  insert_esg_data.sql  populate_real_esg_data.py  populate_real_esg_data_v2.py  pytest.ini  requirements-dev.txt  requirements.txt  seed_cac40_complete.py  seed_complete_demo.py  seed_everything.py  seed_final_data.py  seed_initial_data_fixed.py  seed_mat_risks_fixed.py  seed_mat_risks_only.py  seed_sample_esg_data.py  seed_sample_esg_data_fixed.py  test_celery.py
backup_cleanup_20260311_225644/: routes.tsx
docker/: Dockerfile.backend
docs/: docker-setup.md
e2e/: package.json  playwright.config.ts  tsconfig.json
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
k8s/: README.md  ingress.yaml  namespace.yaml  secrets.yaml.example
monitoring/: prometheus.yml
nginx/: nginx.conf  nginx.http.conf
scripts/: backup-db.sh  docker-logs.sh  docker-restart.sh  docker-start.sh  docker-stop.sh  setup-vps.sh
test_data_files/: 00_GUIDE_UTILISATION.md  01_donnees_environnementales.csv  02_donnees_sociales.csv  03_donnees_gouvernance.csv  04_donnees_completes_2026.csv  05_evolution_temporelle.csv  06_template_import_vide.csv  README.txt  (+1 more)
(+474 files in other folders)
